# bootstrap

./: .gitignore  .nixos-test-history  .woodpecker.yaml  0001-yet.patch  0002-not-push-events.patch  Cargo.nix  Cargo.toml  agent.nix  bootstrap.nix  create-ami-wp.py  create-ami.py  debug-ami.sh  debug-host-module.nix  flake.nix  import-and-register-image.sh  load-balancer-ng.nix  load-balancer.nix  openapi.json  out.diff  readme.md  seeddb.sh  serve.py  service.app.nix  service.webserver.nix  shell.nix  stdout.yaml  test.sh  testScript.py  update.sh  vector.yaml  woodpecker.nix  wp-common.nix
.github/workflows/: build.yml  flake.yml  test.yml
.github/workfows/: build.yml
.woodpecker/: .woodpecker.yaml  ami.yaml  echo.yaml  flakes.yaml  nix.yaml  ssh.yaml
aws-refarch-wordpress/templates/: aws-refarch-wordpress-master-newvpc.yaml
bootstrap/: Cargo.toml
bootstrap/src/: add_target.rs  exit_code.rs  get_extra_options.rs  lb.rs  main.rs  wrap_with_deployment_id.rs  write_files.rs
docker-image/: configuration.nix  default.nix
flakery-base/: containers-debug.json  containers.json  role-policy.json  trust-policy.json
src/: bootstrap.rs  error.rs  main.rs
terraform/: main.tf
web-client/: Cargo.toml
web-client/src/: lib.rs
webserver/: Cargo.toml
webserver/src/: error.rs  main.rs  store.rs
webserver/src/guards/: debug_header.rs  mod.rs
webserver/src/handlers/: create_listener.rs  deploy.rs  log.rs  mod.rs
