[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaes = "0.7.0"
libsql = "0.3.2"
hex = "0.4"

# reqwest = "0.12.2"
tokio = { version = "1.37.0", features = ["full", "macros"] }

