[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
libaes = "0.7.0"
libsql = "0.3.2"
hex = "0.4"
reqwest = { version = "0.11.24", default-features=false, features = ["json", "stream"] }

tokio = { version = "1", features = ["full", "macros"] }

dotenv = "0.15.0"
anyhow = "1.0"
