[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"


[dependencies]
libaes = "0.7.0"
libsql = "0.3.2"
hex = "0.4"
reqwest = { version = "0.11.24", default-features=false, features = ["json", "stream"] }

tokio = { version = "1", features = ["full", "macros"] }

dotenv = "0.15.0"
anyhow = { version = "1.0", features = ["backtrace"] }
aws-config= { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-route53= { version = "1.28.0" }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]