[package]
name = "web-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "api client for flakery server"
homepage = "https://flakery.dev"
repository="https://github.com/getflakery/bootstrap"
readme = "readme.md"

[dependencies]
bytes = "1.5.0"
futures-core = "0.3.30"
progenitor-client = "0.6.0"
reqwest = { version = "0.11.24", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"

