[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"

rusoto_core = "0.47.0"
rusoto_ec2 = "0.47.0"
rusoto_autoscaling = "0.47.0"
rusoto_elbv2 = "0.47.0"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.30.0"

tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio-sync = "0.1.8"
rocket_okapi = { version = "0.8.0", features = [ "swagger", "rapidoc" ] }
schemars = { version = "0.8"  }
base64 = "0.22.0"
aws-sdk-route53 = "1.20.0"
aws-smithy-runtime = "=1.2.1"


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
